<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title"
            android:textSize="17sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@+id/event_title_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_title"
                android:paddingLeft="8dp"
                android:textSize="15sp"/>

            <ImageButton android:id="@+id/share_imageButton"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@mipmap/icon_share"
                android:background="@android:color/transparent"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/plan_time"
            android:textSize="17sp"
            android:id="@+id/textView2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <Button android:id="@+id/event_date_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@android:color/transparent"/>

            <Button android:id="@+id/event_time_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"/>

            <CheckBox android:id="@+id/event_solved_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/solved"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="35dp"
                android:layout_gravity="right"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#867f7f"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/detail"
            android:textSize="17sp"/>

        <EditText android:id="@+id/event_detail_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_detail"
            android:paddingLeft="8dp"
            android:textSize="15sp"/>

    </LinearLayout>

</ScrollView>